# gregclaw

./: CHANGELOG.md
.github/prompts/: gemma4-research-findings.md  plan-gemma4Integration.prompt.md
PromptBuilder/: Cargo.toml  MCP_GUIDE.md  index.html  styles.css
PromptBuilder/core/: Cargo.toml
PromptBuilder/core/src/: lib.rs
PromptBuilder/src/: app.rs
PromptBuilder/src-tauri/: Cargo.toml  tauri.conf.json
PromptBuilder/src-tauri/src/: lib.rs  main.rs
docs/providers/: ollama.md
extensions/active-memory/: index.test.ts  index.ts
extensions/discord/src/: approval-native.test.ts
extensions/memory-wiki/src/: import-chatgpt.test.ts  import-chatgpt.ts
extensions/ollama/: api.ts  index.ts  runtime-api.ts
extensions/ollama/src/: gemma4-formatter.test.ts  gemma4-formatter.ts  gemma4-gtr-formatter.test.ts  gemma4-gtr-formatter.ts  gemma4-gtr-types.ts  gemma4-integration.test.ts  gemma4-meta.test.ts  gemma4-parser.test.ts  gemma4-parser.ts  gemma4-stream.test.ts  gemma4-stream.ts  gemma4-utils.ts  ollama_impl.md  stream.ts  target-prompt.test.ts
extensions/qa-lab/src/: docker-up.runtime.test.ts  suite.ts
extensions/whatsapp/src/: accounts.ts  channel.ts  outbound-base.ts
extensions/whatsapp/src/auto-reply/: deliver-reply.ts
extensions/whatsapp/src/auto-reply/monitor/: process-message.ts
extensions/whatsapp/src/inbound/: monitor.ts  types.ts
src/agents/tools/: gateway.ts
